{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 99,
  "lineage": "df4f82d5-19aa-a2cf-8f2e-7a6a79dc9254",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00068cd7555f543d5",
            "arn": "arn:aws:ec2:us-east-1:608161780845:instance/i-076f26171f2fab399",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-076f26171f2fab399",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3d736524f32f1ed",
            "private_dns": "ip-10-1-1-214.ec2.internal",
            "private_ip": "10.1.1.214",
            "public_dns": "ec2-54-237-202-193.compute-1.amazonaws.com",
            "public_ip": "54.237.202.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0330a94477e8cf701",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0716726c75ad6cbd2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8a46fb1ad0265f8",
            "tags": {
              "Name": "ServerWeb-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716726c75ad6cbd2"
            ]
          },
          "depends_on": [
            "aws_security_group.security"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bb3fc6ec32497135",
            "owner_id": "608161780845",
            "tags": {
              "env": "default"
            },
            "vpc_id": "vpc-01fe5eacff267b49e"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003af407da868fcbe",
            "owner_id": "608161780845",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb3fc6ec32497135",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01fe5eacff267b49e"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130452ff08b5447d",
            "route_table_id": "rtb-003af407da868fcbe",
            "subnet_id": "subnet-0f8a46fb1ad0265f8"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.public_subnet_a"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608161780845:security-group/sg-0716726c75ad6cbd2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0716726c75ad6cbd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ServerWeb-security",
            "name_prefix": null,
            "owner_id": "608161780845",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01fe5eacff267b49e"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608161780845:subnet/subnet-0f8a46fb1ad0265f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0f8a46fb1ad0265f8",
            "map_public_ip_on_launch": true,
            "owner_id": "608161780845",
            "tags": {
              "Name": "subnet-a-default",
              "env": "default"
            },
            "vpc_id": "vpc-01fe5eacff267b49e"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:608161780845:vpc/vpc-01fe5eacff267b49e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05c483745493c20a8",
            "default_route_table_id": "rtb-0ba214e5aedb560b3",
            "default_security_group_id": "sg-09ef4695cfa974039",
            "dhcp_options_id": "dopt-0343a83540022dab5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01fe5eacff267b49e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba214e5aedb560b3",
            "owner_id": "608161780845",
            "tags": {
              "Name": "ServerWeb-vpc-default",
              "env": "default"
            }
          }
        }
      ]
    }
  ]
}